8. K8s Upgrades & Deployment strategies/canary/ingress-canary.yml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faraz-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  ingressClassName: nginx
  rules:
  - host: prod.faraz.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: faraz-canary-service
            port:
              number: 80
